infra/kubernetes/base/databases.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-db
  namespace: secureflow
  labels:
    app: auth-db
    team: platform
spec:
  replicas: 1
  selector:
    matchLabels:
      svc: auth-db
  template:
    metadata:
      labels:
        svc: auth-db
        app: auth-db
        team: platform
    spec:
      containers:
        - name: postgres
          image: postgres@sha256:04a3d3d1475ad37f07d8219d0e5eb46f64ac132bf6e110c772dab45e12e4a919    # CK-03 remediated: digest-pinned (postgres:14 as of Day 7)
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: auth-db
  namespace: secureflow
spec:
  selector:
    svc: auth-db
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-db
  namespace: secureflow
  labels:
    app: transaction-db
    team: platform
spec:
  replicas: 1
  selector:
    matchLabels:
      svc: transaction-db
  template:
    metadata:
      labels:
        svc: transaction-db
        app: transaction-db
        team: platform
    spec:
      containers:
        - name: postgres
          image: postgres@sha256:04a3d3d1475ad37f07d8219d0e5eb46f64ac132bf6e110c772dab45e12e4a919    # CK-03 remediated: digest-pinned (postgres:14 as of Day 7)
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: transaction-db
  namespace: secureflow
spec:
  selector:
    svc: transaction-db
  ports:
    - port: 5432
      targetPort: 5432
